Try to resolve blockquote dark mode issue, but failed

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,9 +19,16 @@ body {
   --textNormal: #222;
   --textTitle: #222;
   --textLink: rgb(45, 45, 80);
+  --textColor: #222;
   --hr: hsla(0, 0%, 0%, 0.2);
 
   background-color: var(--bg);
+  --anchorLink: #3273dc;
+  --navbarBackground: whitesmoke;
+  --navbarColor: #363636;
+
+  --boxShadow1: rgba(0, 0, 0, 0.13);
+  --boxShadow2: rgba(0, 0, 0, 0.19);
 }
 
 body.dark {
@@ -32,7 +39,25 @@ body.dark {
   --textTitle: white;
   --textLink: white;
   --hr: hsla(0, 0%, 100%, 0.2);
+
+  --anchorLink: #f0da4f;
+  --navbarBackground: #000008;
+  --navbarColor: white;
+
+  --boxShadow1: rgba(249, 251, 82, 0.13);
+  --boxShadow2: rgba(232, 248, 85, 0.19);
 }
+
+.content blockquote {
+  background-color: var(--navbarBackground);
+}
+.content h1,
+.content h2,
+.content h3,
+.content li {
+  color: var(--textColor);
+}
+
 .switch {
   position: relative;
   display: inline-block;
